# wiros_csi_node

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists2.txt  CMakeLists_ROS1.txt  CMakeLists_ros2.txt  LICENSE.txt  README.md  package.xml  package_ros2.xml  readme.html
cad_files/: ac86u_case.stl  ac86u_case_lid.dxf
docs/: ROS-Removal-Harry-Yufeng.md
include/: nexcsiserver.h  nexctl.h  shutils.h  utils.h
launch/: ap_map.launch  asus.launch  asus_rpi_record.launch  basic.launch  basic_launch.py
nexmon_firmware/: Makefile  csi.ucode.bcm4366c0.10_10_122_20.patch  extract_data.py  install.sh  read_pcap.cpp
nexmon_firmware/csi/: collect2g.sh  collectcsi.sh  configcsi.sh  dhd.ko  listener  makecsiparams  nexutil  reload.sh  send.sh  send_num.sh  setup.sh  test.cpp  txtest
nexmon_firmware/inject_patch/: nexmon.patch  nexmoncsi.patch
scripts/: changechannelservice.py  csi_rosbag_info.py  csi_rosbag_info.py~
src/: apscanner.cpp  main.cpp  nex_conf.cpp  nex_conf.hpp  nex_data.hpp  nex_data.hpp~  nexcsiserver.cpp  ros2_interface.cpp  ros2_interface.hpp  ros_interface.cpp  ros_interface.hpp  shell_utils.cpp  shell_utils.hpp  wiros_csi_main.cpp
src/pythonNoRos/: config.json  nexcsiserver.py  test_config.py
srv/: ConfigureCSI.srv
